[metadata]
name = GoogleLocationUtility
version = 0.1.0a1
author = NBPub
description = Utility for Location History data from Google Takeout.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NBPub/GoogleLocationUtility
download_url = https://github.com/NBPub/GoogleLocationUtility/archive/refs/heads/main.zip
license = GNU General Public License v3 (GPLv3)
license_file = LICENSE
project_urls =
    Bug Tracker = https://github.com/GoogleLocationUtility/issues
classifiers =
    Programming Language :: Python :: 3
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules
	
[options.entry_points]
console_scripts =
        home = GLU.home:welcome

[options.packages.find]
where = src
include = GLU

[options]
python_requires = >= 3.8
packages = find:
package_dir =
    =src

install_requires =
	Click >= 8.0
	exif >= 1.3
	plotly >= 5.6
	pandas >= 1.4
	numpy >= 1.22
	matplotlib >= 3.5
	seaborn >= 0.11.2
	fastparquet >= 0.8
	Jinja2 >= 3.0
	
	
